--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-scripts": "^4.0.3",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
+        "serve": "^13.0.2",
         "yup": "^0.32.9"
     },
     "scripts": {
